--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "vue": "^2.4.2",
+    "vue-feather-icons": "^0.1.1",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
