--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "shuffle-seed": "^1.1.6",
     "vue": "^2.4.2",
     "vue-feather-icons": "^0.1.1",
     "vue-router": "^2.7.0"
