--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "shuffle-seed": "^1.1.6",
     "vue": "^2.4.2",
     "vue-feather-icons": "^0.1.1",
+    "vue-instantsearch": "^1.0.1",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
